<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="cloud_sync_title">Google Keyboard Sync</string>
    <string name="cloud_sync_summary">Sync is turned on</string>
    <string name="cloud_sync_summary_disabled">Sync your personal dictionary across devices</string>
    <string name="sync_now_title">Sync now</string>
    <string name="clear_sync_data_title">Delete cloud data</string>
    <string name="clear_sync_data_summary">Deletes your synced data from Google</string>
    <string name="clear_sync_data_confirmation">Your synced data will be deleted from the cloud. Are you sure?</string>
    <string name="clear_sync_data_ok">Delete</string>
    <string name="cloud_sync_cancel">Cancel</string>
    <string name="cloud_sync_opt_in_text">Your personal dictionary will be synced and backed up to
        Google servers. The statistical information of word frequency may be collected to help
        improve our products. The collection and usage of all the information will be compliant with
        <a href="https://www.google.com/policies/privacy">Google\'s Privacy Policy</a>.
    </string>
    <string name="add_account_to_enable_sync">
        Please add a Google account to this device to enable this feature
    </string>
    <string name="cloud_sync_summary_disabled_work_profile">
        Sync is not available for devices with Google Apps for Business accounts
    </string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g id="APPLICATION_NAME" example="Android Keyboard">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Languages&#160;&amp; input settings.</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Languages</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="select_language">Languages</string>
    <string name="hint_add_to_dictionary">Tap again to save</string>
    <string name="hint_add_to_dictionary_without_word">Tap here to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="no_accounts_selected">No accounts selected</string>
    <string name="account_selected">Currently using <xliff:g id="EMAIL_ADDRESS" example="someone@example.com">%1$s</xliff:g></string>
    <string name="account_select_ok">OK</string>
    <string name="account_select_cancel">Cancel</string>
    <string name="account_select_sign_out">Sign out</string>
    <string name="account_select_title">Select an account to use</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_hi_ZZ">Hinglish</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_en_US">English (US) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_es_US">Spanish (US) (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_hi_ZZ">Hinglish (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_with_layout_sr_ZZ">Serbian (<xliff:g id="KEYBOARD_LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <string name="subtype_generic_traditional"><xliff:g id="LANGUAGE_NAME" example="Nepali">%s</xliff:g> (Traditional)</string>
    <string name="subtype_generic_compact"><xliff:g id="LANGUAGE_NAME" example="Hindi">%s</xliff:g> (Compact)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="subtype_no_language_qwertz">Alphabet (QWERTZ)</string>
    <string name="subtype_no_language_azerty">Alphabet (AZERTY)</string>
    <string name="subtype_no_language_dvorak">Alphabet (Dvorak)</string>
    <string name="subtype_no_language_colemak">Alphabet (Colemak)</string>
    <string name="subtype_no_language_pcqwerty">Alphabet (PC)</string>
    <string name="subtype_emoji">Emoji</string>
    <string name="keyboard_theme">Keyboard theme</string>
    <string name="keyboard_theme_holo_white" translatable="false">Holo White</string>
    <string name="keyboard_theme_holo_blue" translatable="false">Holo Blue</string>
    <string name="keyboard_theme_material_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_material_light" translatable="false">Material Light</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="custom_input_style_already_exists">"The same input style already exists: <xliff:g id="INPUT_STYLE_NAME" example="English (Dvorak)">%s</xliff:g>"</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="xaulinxs_customization_title">Personalização XaulinXs</string>
    <string name="xaulinxs_customization_summary">Papel de parede, cores, transparência, tamanho e fonte</string>
    <string name="xaulinxs_section_wallpaper">Papel de parede do teclado</string>
    <string name="xaulinxs_wallpaper_enable">Ativar papel de parede</string>
    <string name="xaulinxs_wallpaper_choose">Escolher imagem</string>
    <string name="xaulinxs_section_colors">Cores</string>
    <string name="xaulinxs_keyboard_color_enable">Cor de fundo personalizada</string>
    <string name="xaulinxs_keyboard_color_choose">Escolher cor do teclado</string>
    <string name="xaulinxs_key_text_color_enable">Cor da fonte personalizada</string>
    <string name="xaulinxs_key_text_color_choose">Escolher cor da fonte</string>
    <string name="xaulinxs_section_size">Transparência e tamanho</string>
    <string name="xaulinxs_alpha_label">Transparência</string>
    <string name="xaulinxs_scale_label">Tamanho do teclado</string>
    <string name="xaulinxs_section_font">Fonte personalizada</string>
    <string name="xaulinxs_font_choose">Importar fonte (.ttf)</string>
    <string name="xaulinxs_font_none">Fonte atual: padrão do sistema</string>
    <string name="xaulinxs_font_reset">Restaurar fonte padrão</string>
    <string name="xaulinxs_clipboard_panel_title">Área de transferência</string>
    <string name="xaulinxs_clipboard_empty">Nada copiado ainda</string>
    <string name="xaulinxs_clipboard_clear_all">Limpar tudo</string>
    <string name="xaulinxs_position_hint">Arraste para cima ou para baixo (ou use a barra abaixo) e toque em Aplicar para salvar.</string>
    <string name="xaulinxs_position_apply">Aplicar</string>
    <string name="xaulinxs_position_reset">Redefinir</string>
</resources>