<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screen_appearance"
    android:title="@string/settings_screen_appearance">
    <PreferenceScreen
        android:fragment="com.android.inputmethod.latin.settings.ThemeSettingsFragment"
        android:key="screen_theme"
        android:title="@string/settings_screen_theme" />
    <PreferenceScreen
        android:fragment="com.android.inputmethod.latin.settings.CustomInputStyleSettingsFragment"
        android:key="custom_input_styles"
        android:title="@string/custom_input_styles_title" />
    <CheckBoxPreference
        android:key="pref_split_keyboard"
        android:title="@string/enable_split_keyboard"
        android:persistent="true"
        android:defaultValue="false" />
    <!-- XaulinXs Foundry: entrada de menu para a tela de customização
         visual própria (wallpaper, cores, transparência, tamanho, fonte
         TTF). Abre uma Activity dedicada em vez de um PreferenceFragment,
         pois as customizações usam color pickers e um seletor de imagem
         que não se encaixam bem no sistema de Preference simples. -->
    <Preference
        android:key="pref_xaulinxs_customization"
        android:title="@string/xaulinxs_customization_title"
        android:summary="@string/xaulinxs_customization_summary">
        <intent
            android:targetPackage="com.android.inputmethod.latin"
            android:targetClass="com.xaulinxs.customization.CustomizationSettingsActivity" />
    </Preference>
</PreferenceScreen>
